<resources>
    <string name="app_name">BoxMan</string>
    <string name="import_">Import…</string>
    <string name="error_in_program">Error in the puzzle library, can\'t continue the game</string>
    <string name="speed">Speed:</string>
    <string name="reverse_play">Reverse play!</string>
    <string name="combining_forward_and_backward">Combining forward and backward!</string>
    <string name="all_puzzles_have_been_solved">All puzzles have been solved!</string>
    <string name="are_you_sure_to_clear_the_list">Are you sure to clear the list?</string>
    <string name="deletion_range">Delete range: 1 —</string>
    <string name="not_available_in_title_mode">Not available in title mode.</string>
    <string name="puzzle_file_not_found">Puzzle file not found.</string>
    <string name="import_from_clipboard">Import from clipboard</string>
    <string name="duplicate_or_invalid_solutions_were_not_imported">Duplicate or invalid solutions were not imported!</string>
    <string name="import_successful">Import successful!</string>
    <string name="title_information_">Information:</string>
    <string name="change_skin">Skin</string>
    <string name="change_background">Background</string>
    <string name="alternating_tile_brightness">Checkerboard brightness</string>
    <string name="movement_speed">Movement speed</string>
    <string name="skin">Skin</string>
    <string name="skin_image_file_not_found">Skin image file not found!</string>
    <string name="background_image">Background image</string>
    <string name="image_file_not_found">Image file not found!</string>
    <string name="double_click_box_numbering">Double-click box numbering</string>
    <string name="automatic_box_numbering">Automatic box numbering</string>
    <string name="ruler">Ruler</string>
    <string name="ruler_does_not_rotate_with_puzzle">Ruler does not rotate with puzzle</string>
    <string name="distinguish_odd_even_tiles">Enable checkerboard overlay</string>
    <string name="deadlock_detection">Deadlock detection</string>
    <string name="reachability_hints">Reachability hints</string>
    <string name="turning_animation">Turning animation</string>
    <string name="long_press_for_connected_network_hints">Long press for connected net hints</string>
    <string name="auto_load_latest_state">Autosave latest state</string>
    <string name="locate_double_pushes">Locate double pushes</string>
    <string name="auto_crossing">Auto-crossing</string>
    <string name="single_step_moves">Single step moves</string>
    <string name="progress_bar">Progress bar</string>
    <string name="auto_climb_stairs">Auto-climb stairs</string>
    <string name="system_navigation_keys">System navigation keys</string>
    <string name="disable_fullscreen">Disable fullscreen</string>
    <string name="push_only_during_demo">Push only during demo</string>
    <string name="show_current_time_hints">Show current time hints</string>
    <string name="volume_level">Volume level</string>
    <string name="buttonText_save">Save</string>
    <string name="buttonText_default">Default</string>
    <string name="back">Back</string>
    <string name="button_continue">Continue</string>
    <string name="undo_move">Undo move</string>
    <string name="restart">Restart!</string>
    <string name="go_to_end">Redo all!</string>
    <string name="replay">Replay!</string>
    <string name="you_need_to_provide_the_player_position">You need to provide the player position!</string>
    <string name="you_can_leave_now">You can leave now!</string>
    <string name="this_move_creates_a_deadlock">This move creates a deadlock. Continue?</string>
    <string name="insufficient_space">(insufficient space)</string>
    <string name="frozen_position">(frozen position)</string>
    <string name="closed_diagonal">(closed diagonal)</string>
    <string name="net_deadlock">(Net deadlock)</string>
    <string name="no_available_moves">No available moves!</string>
    <string name="macro_actions_undone">The puzzle has been reset to the state prior to the \'macro\' being triggered</string>
    <string name="parity_grid_mode_off">Parity grid mode - OFF</string>
    <string name="parity_grid_mode_on">Parity grid mode - ON</string>
    <string name="attention">Attention</string>
    <string name="solution_or_snapshot_too_long_to_save">Solution or snapshot is too long. Save it to a file!</string>
    <string name="the_solution_has_been_saved">The solution has been saved!</string>
    <string name="moves_">Moves:</string>
    <string name="pushes_">, Pushes:</string>
    <string name="state_has_been_saved">There are duplicates, they have been reordered!</string>
    <string name="duplicates_found_rearranged">Duplicates found</string>
    <string name="an_error_occurred_saving_failed">An error occurred. Saving failed!</string>
    <string name="the_solution_is_a_duplicate_not_saved_again">The solution is a duplicate. Not saved again!</string>
    <string name="title_forward_and_reverse_match">Forward and reverse match</string>
    <string name="the_solution_is_too_long_to_save_to_a_file">The solution is too long, save it to a file.</string>
    <string name="the_solution_has_been_successfully_saved">The solution has been successfully saved!</string>
    <string name="_you_can_use_the_arrow_keys_to_watch_the_walkthrough_demonstration_">(You can use the arrow keys to watch the walkthrough demonstration)</string>
    <string name="open">Open</string>
    <string name="export_to_file_xsb_and_lurd">Export XSB and LURD to file</string>
    <string name="export_to_clipboard_xsb_and_lurd">Export XSB and LURD to clipboard</string>
    <string name="delete">Delete</string>
    <string name="clear_state_history">Clear state history…</string>
    <string name="delete_solutions">Delete solutions</string>
    <string name="Rename_">Rename…</string>
    <string name="add_puzzle_file">Add puzzle files…</string>
    <string name="add_puzzle_clipboard">Add puzzle from clipboard…</string>
    <string name="add_competition_puzzles_sokobanWS">Add competition puzzles (Sokoban.ws)</string>
    <string name="details_">Details…</string>
    <string name="export___">Export…</string>
    <string name="no_matching_puzzles_found">No matching puzzles found!</string>
    <string name="edit_as_new_puzzle">Edit as new puzzle</string>
    <string name="lock_icon">Lock icon</string>
    <string name="move_puzzle_to">Move puzzle to…</string>
    <string name="copy_puzzle_to___">Copy puzzle to…</string>
    <string name="details___">Details…</string>
    <string name="invert_selection">Invert selection</string>
    <string name="select_range_to___">Select range to…</string>
    <string name="rotate_90_left">Rotate 90° left （Lurd）</string>
    <string name="rotate_90_right">Rotate 90° right （Lurd）</string>
    <string name="rotate_180_degrees">Rotate 180°（Lurd）</string>
    <string name="horizontal_flip">Flip horizontally</string>
    <string name="flip_vertically">Flip vertically</string>
    <string name="description_of_macro_function">Description of macro function</string>
    <string name="import_instructions">Import instructions</string>
    <string name="Submit">Submit</string>
    <string name="save_block_as">Save Block As…</string>
    <string name="find_next">Find next</string>
    <string name="find_previous">Find previous</string>
    <string name="find_turn">Find turn</string>
    <string name="find_puzzle">Find puzzle</string>
    <string name="find_solution">Find solution</string>
    <string name="find_all_puzzles">Find all puzzles</string>
    <string name="find_about">About</string>
    <string name="find_help">Help</string>
    <string name="puzzles_top">Top</string>
    <string name="puzzles_bottom">Bottom</string>
    <string name="go_to___">Go to…</string>
    <string name="puzzles_select_multiple">Select multiple</string>
    <string name="puzzles_show_title">Show title</string>
    <string name="puzzles_show_duplicates">Show duplicates</string>
    <string name="puzzles_first_not_solved">First not solved</string>
    <string name="puzzles_recent">Recent</string>
    <string name="puzzles_clear">Clear</string>
    <string name="puzzles_columns_count">Columns count…</string>
    <string name="puzzles_delete_more___">Delete more…</string>
    <string name="puzzles_about">About</string>
    <string name="menu_export___">Export…</string>
    <string name="menu_recent_puzzles">Recent puzzles</string>
    <string name="menu_puzzle_search">Puzzle search</string>
    <string name="menu_new_set">New set…</string>
    <string name="menu_create_puzzle">Create puzzle</string>
    <string name="menu_extract_puzzle_from_image">Extract from image</string>
    <string name="menu_mf8_competition_list">MF8 competition list</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="settings_menu">Settings…</string>
    <string name="settings_to_toggle">On/off settings…</string>
    <string name="player_restart">Restart</string>
    <string name="player_undo_all">Undo all</string>
    <string name="player_load___">Load…</string>
    <string name="player_save">Save</string>
    <string name="player_about">About</string>
    <string name="player_help">Help</string>
    <string name="player_exit">Exit</string>
    <string name="recog_restore">Restore</string>
    <string name="recog_similarity">Similarity</string>
    <string name="recog_shrink">Shrink</string>
    <string name="recog_extend">Extend</string>
    <string name="recog_complete">Complete</string>
    <string name="action_from_current">From current</string>
    <string name="action_rotation">Rotation</string>
    <string name="action_load">Load</string>
    <string name="action_save">Save</string>
    <string name="action_clear">Clear</string>
    <string name="action_save_temporary">Save temporary</string>
    <string name="action_preedit">Preedit</string>
    <string name="action_execute">Execute</string>
    <string name="gifSetDialog_others_">Others:</string>
    <string name="gifSetDialog_keyframes_only">Keyframes only</string>
    <string name="gifSetDialog_watermark">Watermark:</string>
    <string name="transform">Transform</string>
    <string name="exit">Exit!</string>
    <string name="copy_to_clipboard_lurd">Copy lurd to clipboard</string>
    <string name="copy_to_clipboard_forward_lurd">Copy forward lurd to clipboard</string>
    <string name="copy_to_clipboard_backwards_lurd">Copy backward lurd to clipboard</string>
    <string name="note_tags">Note tags</string>
    <string name="delete_all_saved_states">Delete all saved states</string>
    <string name="submit_solution_sokoban_cn">Submit solution (sokoban.cn)</string>
    <string name="generate_gif_animation">Generate GIF animation</string>
    <string name="execute">Execute</string>
    <string name="undo_">Undo</string>
    <string name="redo_">Redo</string>
    <string name="cut_">Cut</string>
    <string name="copy_">Copy</string>
    <string name="paste_">Paste</string>
    <string name="save_">Save</string>
    <string name="more_">More</string>
    <string name="live_skin">Live skin</string>
    <string name="none_">None</string>
    <string name="text_default">Default</string>
    <string name="customization">Customization</string>
    <string name="record_actions">Record actions</string>
    <string name="play">Play</string>
    <string name="ruler___">Ruler…</string>
    <string name="settings___">Settings…</string>
    <string name="reset_the_map">Reset the map</string>
    <string name="export_xsb">Export(XSB)</string>
    <string name="import_xsv_and_lurd">Import(XSB and Lurd)</string>
    <string name="resize___">Resize…</string>
    <string name="normalize">Normalize</string>
    <string name="puzzle_data">Puzzle data</string>
    <string name="operation_instructions">Operation instructions</string>
    <string name="go_to_end_">Redo all</string>
</resources>