<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	android:fitsSystemWindows="true">
	<item
		android:id="@+id/player_settings1"
		android:title="@string/settings_menu" />

	<item
		android:id="@+id/player_settings2"
		android:title="@string/settings_to_toggle" />

	<item
		android:id="@+id/player_ReStart"
		android:title="@string/player_restart" />

	<item
		android:id="@+id/player_Home"
		android:title="@string/player_undo_all" />

	<item
	    android:id="@+id/player_End"
		android:title="@string/go_to_end_"/>

	<item
		android:id="@+id/player_EX"
		android:title="@string/export___"/>

	<item
        android:id="@+id/player_IN"
        android:title="@string/import_"
		android:orderInCategory="10"/>

	<!-- Solver item added with android:orderInCategory="11" here -->

	<item
		android:id="@+id/player_load"
		android:title="@string/player_load___"
		android:orderInCategory="12" />

	<item
		android:id="@+id/player_save"
		android:title="@string/player_save"
		android:orderInCategory="13" />

	<item
		android:id="@+id/player_about"
		android:title="@string/player_about"
		android:orderInCategory="14" />

	<item
		android:id="@+id/player_help"
		android:title="@string/player_help"
		android:orderInCategory="15" />

	<item
		android:id="@+id/player_exit"
		android:title="@string/player_exit"
		android:orderInCategory="16" />

</menu>