<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	android:fitsSystemWindows="true">

	<item
		android:id="@+id/find_pre"
		android:showAsAction="always"
		android:title="@string/find_previous" />

	<item
		android:id="@+id/find_next"
		android:showAsAction="always"
		android:title="@string/find_next" />

	<item
		android:id="@+id/find_trun"
		android:title="@string/find_turn" />

	<item
		android:id="@+id/find_level"
		android:title="@string/find_puzzle" />

	<item
		android:id="@+id/find_solution"
		android:title="@string/find_solution" />

	<item
		android:id="@+id/find_level_all"
		android:checkable="true"
		android:title="@string/find_all_puzzles" />

	<item
		android:id="@+id/find_about"
		android:title="@string/find_about" />

	<item
		android:id="@+id/find_help"
		android:title="@string/find_help" />

</menu>