<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	android:fitsSystemWindows="true">

	<item
		android:id="@+id/recog_about"
		android:showAsAction="always"
		android:title="？"/>

	<item
		android:id="@+id/recog_restore"
		android:showAsAction="always"
		android:title="@string/recog_restore" />

	<item
		android:id="@+id/recog_similarity"
		android:showAsAction="always"
		android:title="@string/recog_similarity" />

	<item
		android:id="@+id/recog_shrink"
		android:showAsAction="always"
		android:title="@string/recog_shrink" />

	<item
		android:id="@+id/recog_extend"
		android:showAsAction="always"
		android:title="@string/recog_extend" />

	<item
		android:id="@+id/recog_complete"
		android:showAsAction="always"
		android:title="@string/recog_complete" />

</menu>