<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:keepScreenOn="true">

    <View
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="#363636">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:gravity="left"
        android:paddingRight="10dp"
        android:background="#363636"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/gifSetDialog_others_"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/gif_act_type"
            style="@style/CustomCheckboxTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gifSetDialog_keyframes_only"
            android:textSize="16sp" />

        <View
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:background="#363636">
        </View>

        <CheckBox
            android:id="@+id/gif_act_skin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomCheckboxTheme"
            android:text="@string/live_skin"
            android:textSize="16sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="#363636">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:gravity="left"
        android:paddingRight="10dp"
        android:background="#363636"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/gifSetDialog_watermark"
            android:textSize="16sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomCheckboxTheme"
            android:orientation="horizontal" >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gif_mark_1"
                android:text="@string/none_"
                android:padding="4dp"
                android:textSize="14sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gif_mark_2"
                android:text="@string/text_default"
                android:textSize="14sp"
                android:padding="4dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gif_mark_3"
                android:text="@string/customization"
                android:padding="4dp"
                android:textSize="14sp" />

        </RadioGroup>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="#363636">
    </View>

</LinearLayout>
